--- a/_config.yml
+++ b/_config.yml
@@ -11,16 +11,18 @@ plugins: [jekyll-paginate]
 # Setup
 title:            'STAT 215A'
 tagline:          ''
-description:      '[Fall 2021] <br /> Bin Yu <br />'
+description:      '[Fall 2020] <br /> Bin Yu <br />'
 url:              "https://yu-group.github.io/stat-215a-fall-2021/"
-baseurl:          "/stat-215a-fall-2021"
+baseurl:          "/stat-215a-fall-2020"
 
 author:
-  name:           'Bin Yu, James Duncan'
+  name:           'Bin Yu, Omer Ronen'
   url:            "https://yu-group.github.io/stat-215a-fall-2021/"
 
 paginate:         5
 
-repository: Yu-Group/stat-215a-fall-2021
+repository: Yu-Group/stat-215a-fall-2020
 
 gems: ["jekyll-github-metadata"]
+
+encoding: utf-8
